applying sonar rules